# shIOI

.github/workflows/: build_plugin.yml
core_dsp/: Arpeggiator.h  AudioTypes.h  CMakeLists.txt  Envelope.h  Filters.h  Gain.h  Oscillators.h
platform_juce/: CMakeLists.txt
platform_juce/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
